Some API error handling

--- a/views/header.jade
+++ b/views/header.jade
@@ -10,7 +10,7 @@ header
   nav
     ul
       li: a.all.is-active(href='#') All Tasks
-        span 24
+        span {{todos.length}}
       li: a.incomplete(href='#') Incomplete
         span 12
       li: a.complete(href='#') Completed
