Finishing up API CRUD operations, updated UI

--- a/views/list.jade
+++ b/views/list.jade
@@ -1,9 +1,14 @@
-section
+section(ng-show="todos.length")
   h3: span DO IT
   h5 completed?
   ol
-    li(ng-repeat='todo in list')
-      span {{todo.name}}
+    li(ng-repeat='todo in todos', ng-class='{complete: todo.done, editing: todo == editingTodo}')
+      div(class='view')
+        span(ng-click='editTodo(todo)') {{todo.name}}
         div.done-checkbox
           input(type='checkbox', ng-model='todo.done' id='todo-{{todo._id}}' ng-change='updateTodo(todo)')
           label(for='todo-{{todo._id}}')
+      div(class='modify')
+        form(ng-submit='finishEditing(todo)', ng-model='editingTodo')
+          input(class='edit', ng-model='todo.name', ng-blur='finishEditing(todo)')
+        button(class='delete', ng-click='removeTodo(todo)')
