--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -387,18 +387,18 @@ nav li a span {
   }
 }
 
-/* line 1, ../../sass/partials/_list.scss */
+/* line 3, ../../sass/partials/_list.scss */
 .list-content {
   padding: 0 2%;
   margin-bottom: 2em;
 }
 @media (min-width: 28em) {
-  /* line 1, ../../sass/partials/_list.scss */
+  /* line 3, ../../sass/partials/_list.scss */
   .list-content {
     padding: 0 4%;
   }
 }
-/* line 9, ../../sass/partials/_list.scss */
+/* line 11, ../../sass/partials/_list.scss */
 .list-content h3 {
   border: 2px solid #99a3a5;
   border-width: 2px 0;
@@ -409,12 +409,12 @@ nav li a span {
   letter-spacing: 0.04em;
 }
 @media (min-width: 28em) {
-  /* line 9, ../../sass/partials/_list.scss */
+  /* line 11, ../../sass/partials/_list.scss */
   .list-content h3 {
     font-size: 1.5em;
   }
 }
-/* line 22, ../../sass/partials/_list.scss */
+/* line 24, ../../sass/partials/_list.scss */
 .list-content h3 span {
   margin: 2px 0;
   padding: 6px 0;
@@ -422,25 +422,42 @@ nav li a span {
   border: 1px dashed #c2c8c9;
   border-width: 1px 0;
 }
-/* line 31, ../../sass/partials/_list.scss */
+/* line 33, ../../sass/partials/_list.scss */
 .list-content h5 {
   color: #99a3a5;
   margin: -12px 0 2px;
   text-align: right;
 }
-/* line 37, ../../sass/partials/_list.scss */
+/* line 39, ../../sass/partials/_list.scss */
 .list-content ol {
   margin: 0;
   padding: 0;
   counter-reset: counter;
 }
-/* line 42, ../../sass/partials/_list.scss */
+/* line 44, ../../sass/partials/_list.scss */
 .list-content ol > li {
   position: relative;
   padding: 12px 12px 0;
   margin-bottom: 5px;
+  color: #444444;
 }
-/* line 47, ../../sass/partials/_list.scss */
+/* line 50, ../../sass/partials/_list.scss */
+.list-content ol > li.complete {
+  color: #aaaaaa;
+}
+/* line 53, ../../sass/partials/_list.scss */
+.list-content ol > li.complete span {
+  text-decoration: line-through;
+}
+/* line 59, ../../sass/partials/_list.scss */
+.list-content ol > li.editing .modify {
+  display: block;
+}
+/* line 64, ../../sass/partials/_list.scss */
+.list-content ol > li.editing .view {
+  display: none;
+}
+/* line 69, ../../sass/partials/_list.scss */
 .list-content ol > li:before {
   position: relative;
   background: #b89335;
@@ -461,24 +478,22 @@ nav li a span {
   display: inline-block;
   counter-increment: counter;
   content: counter(counter,decimal-leading-zero);
-  margin-right: 1em;
   float: left;
 }
-/* line 65, ../../sass/partials/_list.scss */
+/* line 86, ../../sass/partials/_list.scss */
 .list-content ol > li span {
   font-family: 'Gloria Hallelujah', cursive;
-  color: #444444;
   font-size: 1.2em;
   border-bottom: 1px solid #99A3A5;
   display: block;
   margin: 0 2.5em;
   padding: 0 10px 10px;
 }
-/* line 74, ../../sass/partials/_list.scss */
+/* line 95, ../../sass/partials/_list.scss */
 .list-content ol > li input[type=checkbox] {
   visibility: hidden;
 }
-/* line 78, ../../sass/partials/_list.scss */
+/* line 99, ../../sass/partials/_list.scss */
 .list-content ol > li label {
   cursor: pointer;
   position: absolute;
@@ -490,7 +505,7 @@ nav li a span {
   border: 3px solid #b89335;
   background: transparent;
 }
-/* line 89, ../../sass/partials/_list.scss */
+/* line 110, ../../sass/partials/_list.scss */
 .list-content ol > li label:after {
   content: '';
   position: absolute;
@@ -509,15 +524,48 @@ nav li a span {
   background: transparent;
   opacity: 0;
 }
-/* line 105, ../../sass/partials/_list.scss */
+/* line 126, ../../sass/partials/_list.scss */
 .list-content ol > li input[type=checkbox]:checked + label:after {
   opacity: 1;
 }
-/* line 111, ../../sass/partials/_list.scss */
+/* line 130, ../../sass/partials/_list.scss */
+.list-content ol > li .modify {
+  display: none;
+  margin: 0 0 0 3em;
+}
+/* line 137, ../../sass/partials/_list.scss */
 .list-content .done-checkbox {
   position: absolute;
   top: 0;
   right: 0;
+}
+/* line 143, ../../sass/partials/_list.scss */
+.list-content input.edit {
+  font-family: 'Gloria Hallelujah', cursive;
+  color: #444;
+  padding: 0 40px 10px 10px;
+  border-width: 0 0 1px;
+  font-size: 1.2em;
+  display: block;
+  width: 100%;
+  outline: none;
+  box-sizing: border-box;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.4) inset;
+}
+/* line 156, ../../sass/partials/_list.scss */
+.list-content button.delete {
+  background: #b83535;
+  box-shadow: 0 4px 0 #e4a2a2;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 2.8em;
+  width: 2.8em;
+  height: 2.8em;
+  position: absolute;
+  right: 0;
+  top: 0;
+  outline: none;
 }
 
 /* line 34, ../../sass/styles.scss */
