--- a/sass/partials/_list.scss
+++ b/sass/partials/_list.scss
@@ -1,3 +1,5 @@
+$list-item-text-color: #444444;
+
 .list-content {
   padding: 0 2%;
   margin-bottom: 2em;
@@ -43,6 +45,26 @@
       position: relative;
       padding: 12px 12px 0;
       margin-bottom: 5px;
+      color: $list-item-text-color;
+
+      &.complete {
+        color: lighten($list-item-text-color, 40%);
+
+        span {
+          text-decoration: line-through;
+        }
+      }
+
+      &.editing {
+        .modify {
+          display: block;
+        }
+
+        .view
+         {
+          display: none;
+        }
+      }
       
       &:before {
         position: relative;
@@ -58,19 +80,18 @@
         display: inline-block;
         counter-increment: counter;
         content: counter(counter, decimal-leading-zero);
-        margin-right: 1em;
         float: left;
       }
       
       span {
         font-family: 'Gloria Hallelujah', cursive;
-        color: #444444;
         font-size: 1.2em;
         border-bottom: 1px solid #99A3A5;
         display: block;
         margin: 0 2.5em;
         padding: 0 10px 10px;
       }
+
       input[type=checkbox] {
         visibility: hidden;
       }
@@ -105,12 +126,45 @@
       input[type=checkbox]:checked + label:after {
         opacity: 1;
       }
+
+      .modify {
+        display: none;
+        margin: 0 0 0 3em;
+      }
     }
-   } // end ol
+  } // end ol
    
-   .done-checkbox {
-     position: absolute;
-     top: 0;
-     right: 0;
-   }
+  .done-checkbox {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  input.edit {
+    font-family: 'Gloria Hallelujah', cursive;
+    color: #444;
+    padding: 0 40px 10px 10px;
+    border-width: 0 0 1px;
+    font-size: 1.2em;
+    display: block;
+    width: 100%;
+    outline: none;
+    box-sizing: border-box;
+    box-shadow: 0 0 8px rgba(black, 0.4) inset;
+  }
+
+  button.delete {
+    background: #b83535;
+    box-shadow: 0 4px 0 lighten(#b83535, 30%);
+    font-weight: bold;
+    color: white;
+    border: none;
+    border-radius: 2.8em;
+    width: 2.8em;
+    height: 2.8em;
+    position: absolute;
+    right: 0;
+    top: 0;
+    outline: none;
+  }
 }
