--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     section(id='mainApp', ng-controller='TodoCtrl')
       include header
       block content
+      include footer
       
     script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js')
