--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -556,16 +556,27 @@ nav li a span {
 .list-content button.delete {
   background: #b83535;
   box-shadow: 0 4px 0 #e4a2a2;
-  font-weight: bold;
   color: white;
   border: none;
   border-radius: 2.8em;
-  width: 2.8em;
-  height: 2.8em;
+  width: 2.5em;
+  height: 2.5em;
+  font-size: 1.2em;
   position: absolute;
   right: 0;
   top: 0;
   outline: none;
+  white-space: nowrap;
+  -webkit-transition: all ease-in-out;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.2s;
+}
+/* line 172, ../../sass/partials/_list.scss */
+.list-content button.delete:hover {
+  background: #d97a7a;
+  box-shadow: 0 4px 0 #e4a2a2, 0 0 35px #b83535 inset;
 }
 
 /* line 34, ../../sass/styles.scss */
