Added some error conditions, fixed bug when creating new todo

--- a/views/header.jade
+++ b/views/header.jade
@@ -12,7 +12,7 @@ header
       li: a.all.is-active(href='#') All Tasks
         span {{todos.length}}
       li: a.incomplete(href='#') Incomplete
-        span 12
+        span {{incompleteCount}}
       li: a.complete(href='#') Completed
-        span 12
+        span {{completeCount}}
   h1.list-title to do list
