Styles, filtering added, clean-up of SCSS

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,9 @@
 }
 
 // Variables
+
+$main-background: #DFDCD3;
+
 $list-primary-color: #838E90;
 $list-secondary-color: #B89335; //complement($list-primary-color);
 $list-secondary-shadow: lighten($list-secondary-color, 25%); //#B1BFC0;
@@ -28,6 +31,7 @@ $bp-narrow-plus-1: 37.5em;
 // Partials
 //@import "partials/mixins";
 @import "partials/reset";
+@import "partials/task-entry";
 @import "partials/navigation";
 @import "partials/list";
 
@@ -35,12 +39,12 @@ body {
   background: white;
   
   @media (min-width: $bp-narrow-plus-1) {
-    background: url(http://danbowles.com/sandbox/redesign/images/site-bg.png);
+    background: $main-background;
   }
 }
 
 // App
-#mainApp {
+#main {
   margin: 0 auto;
   background: #ffffff;
   
@@ -63,69 +67,6 @@ body {
 
     a {
       color: $list-secondary-color;
-    }
-  }
-  
-  #task-entry {
-    position: absolute;
-    z-index: 1;
-    width: 90%;
-    text-align: right;
-    right: 0;
-    
-    @media (min-width: $bp-narrow-plus-1) {
-      width: 100%;
-      background: #eeeeee;
-      right: -1px;
-      border: 1px solid $primary-border-color;
-      top: -87px;
-    }
-    
-    button {
-      position: absolute;
-      right: 0;
-      top: 0;
-      background: $add-task-button-background;
-      color: $add-task-button-color;
-      height: 47px;
-      width: 45px;
-      font-weight: bold;
-      border: none;
-      font-size: 1.3em;
-      
-      @media (min-width: $bp-narrow) {
-        width: 85px;
-      }
-      
-      &>span {
-        display: none;
-        
-        @media (min-width: $bp-narrow) {
-          display: inline;
-        }
-      }
-    }
-    
-    input {
-      @include placeholder {
-        color: #676767;
-        font-style: italic;
-      }
-
-      &:focus {
-        outline: none;
-      }
-
-      width: 100%;
-      border: none;
-      padding: 11px 57px 12px 5%;
-      background: transparent;
-      @include box-sizing(border-box);
-      font-size: 1.4em;
-      
-      @media (min-width: $bp-narrow) {
-        padding-right: 97px;
-      }
     }
   }
   
