--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah')
     link(rel='stylesheet', href='stylesheets/styles.css')
   body(ng-app='respTodo')
-    section(id='mainApp', ng-controller='TodoCtrl')
+    section(id='main', ng-controller='TodoCtrl')
       include header
       block content
       include footer
