--- a/sass/partials/_task-entry.scss
+++ b/sass/partials/_task-entry.scss
@@ -17,7 +17,7 @@
       position: absolute;
       right: 0;
       top: 0;
-      background: $add-task-button-background;
+      background: #416675;
       color: $add-task-button-color;
       height: 47px;
       width: 45px;
