--- a/sass/partials/_list.scss
+++ b/sass/partials/_list.scss
@@ -67,20 +67,14 @@ $list-item-text-color: #444444;
       }
       
       &:before {
+        display: inline-block;
         position: relative;
-        background: $list-secondary-color;
-        height: 2em;
-        width: 2em;
-        line-height: 2em;
-        text-align: center;
+        float: left;
         font-weight: bold;
         color: white;
-        @include border-radius(2em);
-        @include box-shadow(0 5px 0 lighten($list-secondary-color,30%));
-        display: inline-block;
         counter-increment: counter;
         content: counter(counter, decimal-leading-zero);
-        float: left;
+        @include shaded-circle(2em, $list-secondary-color, lighten($list-secondary-color,30%));
       }
       
       span {
@@ -154,25 +148,19 @@ $list-item-text-color: #444444;
   }
 
   button.delete {
-    background: #b83535;
-    box-shadow: 0 4px 0 lighten(#b83535, 30%);
+    position: absolute;
+    top: 0;
+    right: 0;
     color: white;
     border: none;
-    border-radius: 2.8em;
-    width: 2.5em;
-    height: 2.5em;
     font-size: 1.2em;
-    position: absolute;
-    right: 0;
-    top: 0;
     outline: none;
     white-space: nowrap;
     @include transition(all ease-in-out 0.2s);
+    @include shaded-circle(2.5em, $delete-button-background, lighten($delete-button-background,30%));
 
     &:hover {
-      background: lighten(#b83535, 20%);
-      box-shadow: 0 4px 0 lighten(#b83535, 30%),
-        0 0 35px #b83535 inset;
+      background: darken(#b83535, 5%);
     }
   }
 }
