--- a/app/public/stylesheets/styles.css
+++ b/app/public/stylesheets/styles.css
@@ -276,29 +276,30 @@ ul, ol {
   top: 0;
   background: #416675;
   color: white;
-  height: 47px;
+  height: 46px;
   width: 45px;
   font-weight: bold;
   border: none;
-  font-size: 1.3em;
+  font-size: 2em;
 }
 @media (min-width: 28em) {
   /* line 16, ../../../sass/partials/_task-entry.scss */
   #task-entry button {
     width: 85px;
+    font-size: 1.3em;
   }
 }
-/* line 32, ../../../sass/partials/_task-entry.scss */
+/* line 33, ../../../sass/partials/_task-entry.scss */
 #task-entry button > span {
   display: none;
 }
 @media (min-width: 28em) {
-  /* line 32, ../../../sass/partials/_task-entry.scss */
+  /* line 33, ../../../sass/partials/_task-entry.scss */
   #task-entry button > span {
     display: inline;
   }
 }
-/* line 41, ../../../sass/partials/_task-entry.scss */
+/* line 42, ../../../sass/partials/_task-entry.scss */
 #task-entry input {
   width: 100%;
   border: none;
@@ -329,12 +330,12 @@ ul, ol {
   color: #676767;
   font-style: italic;
 }
-/* line 47, ../../../sass/partials/_task-entry.scss */
+/* line 48, ../../../sass/partials/_task-entry.scss */
 #task-entry input:focus {
   outline: none;
 }
 @media (min-width: 28em) {
-  /* line 41, ../../../sass/partials/_task-entry.scss */
+  /* line 42, ../../../sass/partials/_task-entry.scss */
   #task-entry input {
     padding-right: 97px;
   }
@@ -349,20 +350,18 @@ ul, ol {
   display: block;
   height: 45px;
   width: 45px;
-  background: #838e90;
+  text-align: center;
+  background: #FFFFFF;
+  border-right: 1px solid #99a3a5;
 }
-/* line 10, ../../../sass/partials/_navigation.scss */
-.go-to-nav a img {
-  margin: auto;
-  display: block;
-  padding-top: 6px;
+/* line 12, ../../../sass/partials/_navigation.scss */
+.go-to-nav a .fa {
+  color: #416675;
+  line-height: 45px;
+  transition: all ease-in-out 0.2s;
 }
 /* line 17, ../../../sass/partials/_navigation.scss */
-.show-nav .go-to-nav img {
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
+.show-nav .go-to-nav a .fa {
   transform: rotate(90deg);
 }
 @media (max-width: 37.5em) {
@@ -378,22 +377,22 @@ ul, ol {
   }
 }
 
-/* line 32, ../../../sass/partials/_navigation.scss */
+/* line 34, ../../../sass/partials/_navigation.scss */
 nav {
   position: absolute;
   left: 0;
-  top: 51px;
+  top: 46px;
   width: 100%;
   text-align: center;
-  background: #b4b565;
   display: none;
+  background: #FFFFFF;
 }
-/* line 41, ../../../sass/partials/_navigation.scss */
+/* line 43, ../../../sass/partials/_navigation.scss */
 .show-nav nav {
   display: block;
 }
 @media (min-width: 37.5em) {
-  /* line 32, ../../../sass/partials/_navigation.scss */
+  /* line 34, ../../../sass/partials/_navigation.scss */
   nav {
     top: 0;
     position: fixed;
@@ -401,32 +400,33 @@ nav {
     display: block;
   }
 }
-/* line 53, ../../../sass/partials/_navigation.scss */
+/* line 54, ../../../sass/partials/_navigation.scss */
 nav ul {
   margin: 0 auto;
 }
 @media (min-width: 37.5em) {
-  /* line 53, ../../../sass/partials/_navigation.scss */
+  /* line 54, ../../../sass/partials/_navigation.scss */
   nav ul {
     max-width: 550px;
   }
 }
-/* line 62, ../../../sass/partials/_navigation.scss */
+/* line 63, ../../../sass/partials/_navigation.scss */
 nav li a {
   display: block;
   position: relative;
-  color: white;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
-  line-height: 2.5em;
+  line-height: 3em;
+  background: white;
+  transition: all ease-in-out 0.2s;
 }
-/* line 71, ../../../sass/partials/_navigation.scss */
+/* line 73, ../../../sass/partials/_navigation.scss */
 nav li a:hover span {
   background: #ffffff;
 }
-/* line 75, ../../../sass/partials/_navigation.scss */
-nav li a span {
+/* line 77, ../../../sass/partials/_navigation.scss */
+nav li a .count {
   width: 21px;
   margin-left: 10px;
   padding: 5px 0;
@@ -434,47 +434,78 @@ nav li a span {
   font-size: .7em;
   font-weight: bold;
   display: inline-block;
-  background: #D96D32;
   color: #FFFFFF;
   line-height: 1em;
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  -ms-border-radius: 1em;
-  -o-border-radius: 1em;
   border-radius: 1em;
+  transition: all ease-in-out 0.2s;
+}
+/* line 91, ../../../sass/partials/_navigation.scss */
+nav li a.all {
+  color: #d96d32;
 }
 /* line 20, ../../../sass/partials/_mixins.scss */
-nav li a.all span, nav li a.all:hover, nav li a.all.active, nav li a.all span, nav li a.all:hover, nav li a.all.active {
+nav li a.all .count {
   background: #d96d32;
 }
 /* line 24, ../../../sass/partials/_mixins.scss */
-nav li a.all:hover span, nav li a.all.active span, nav li a.all:hover span, nav li a.all.active span {
+nav li a.all.active, nav li a.all:hover {
+  color: #FFFFFF;
+  background: #d96d32;
+}
+/* line 28, ../../../sass/partials/_mixins.scss */
+nav li a.all.active .count, nav li a.all:hover .count {
+  background: #FFFFFF;
   color: #d96d32;
-  background: #ffffff;
+}
+/* line 95, ../../../sass/partials/_navigation.scss */
+nav li a.complete {
+  color: #2a7d75;
 }
 /* line 20, ../../../sass/partials/_mixins.scss */
-nav li a.complete span, nav li a.complete:hover, nav li a.complete.active {
+nav li a.complete .count {
   background: #2a7d75;
 }
 /* line 24, ../../../sass/partials/_mixins.scss */
-nav li a.complete:hover span, nav li a.complete.active span {
+nav li a.complete.active, nav li a.complete:hover {
+  color: #FFFFFF;
+  background: #2a7d75;
+}
+/* line 28, ../../../sass/partials/_mixins.scss */
+nav li a.complete.active .count, nav li a.complete:hover .count {
+  background: #FFFFFF;
   color: #2a7d75;
-  background: #ffffff;
+}
+/* line 99, ../../../sass/partials/_navigation.scss */
+nav li a.incomplete {
+  color: #d92042;
 }
 /* line 20, ../../../sass/partials/_mixins.scss */
-nav li a.incomplete span, nav li a.incomplete:hover, nav li a.incomplete.active {
+nav li a.incomplete .count {
   background: #d92042;
 }
 /* line 24, ../../../sass/partials/_mixins.scss */
-nav li a.incomplete:hover span, nav li a.incomplete.active span {
+nav li a.incomplete.active, nav li a.incomplete:hover {
+  color: #FFFFFF;
+  background: #d92042;
+}
+/* line 28, ../../../sass/partials/_mixins.scss */
+nav li a.incomplete.active .count, nav li a.incomplete:hover .count {
+  background: #FFFFFF;
   color: #d92042;
-  background: #ffffff;
+}
+/* line 106, ../../../sass/partials/_navigation.scss */
+nav li:last-child {
+  box-shadow: 0 0 40px;
 }
 @media (min-width: 37.5em) {
-  /* line 61, ../../../sass/partials/_navigation.scss */
+  /* line 62, ../../../sass/partials/_navigation.scss */
   nav li {
     float: left;
     width: 33.333333333%;
+  }
+  /* line 114, ../../../sass/partials/_navigation.scss */
+  nav li:last-child {
+    box-shadow: none;
   }
 }
 
@@ -562,14 +593,7 @@ nav li a.incomplete:hover span, nav li a.incomplete.active span {
   width: 2em;
   line-height: 2em;
   text-align: center;
-  -webkit-border-radius: 1em;
-  -moz-border-radius: 1em;
-  -ms-border-radius: 1em;
-  -o-border-radius: 1em;
   border-radius: 1em;
-  -webkit-box-shadow: 0 0.24em #e4d1a2;
-  -moz-box-shadow: 0 0.24em #e4d1a2;
-  box-shadow: 0 0.24em #e4d1a2;
 }
 /* line 80, ../../../sass/partials/_list.scss */
 .list-content ol > li span {
@@ -650,7 +674,6 @@ nav li a.incomplete:hover span, nav li a.incomplete.active span {
   right: 0;
   color: white;
   border: none;
-  font-size: 1.2em;
   outline: none;
   white-space: nowrap;
   -webkit-transition: all ease-in-out;
@@ -658,46 +681,39 @@ nav li a.incomplete:hover span, nav li a.incomplete.active span {
   -moz-transition: all ease-in-out 0.2s;
   -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
-  background: #255c74;
+  background: #b83535;
   height: 2.5em;
   width: 2.5em;
   line-height: 2.5em;
   text-align: center;
-  -webkit-border-radius: 1.25em;
-  -moz-border-radius: 1.25em;
-  -ms-border-radius: 1.25em;
-  -o-border-radius: 1.25em;
   border-radius: 1.25em;
-  -webkit-box-shadow: 0 0.3em #64aece;
-  -moz-box-shadow: 0 0.3em #64aece;
-  box-shadow: 0 0.3em #64aece;
 }
-/* line 162, ../../../sass/partials/_list.scss */
+/* line 161, ../../../sass/partials/_list.scss */
 .list-content button.delete:hover {
   background: #a42f2f;
 }
 
-/* line 49, ../../../sass/styles.scss */
+/* line 48, ../../../sass/styles.scss */
 body {
   background: white;
 }
 @media (min-width: 37.5em) {
-  /* line 49, ../../../sass/styles.scss */
+  /* line 48, ../../../sass/styles.scss */
   body {
-    background: #dfdcd3;
+    background: white;
   }
 }
 
-/* line 58, ../../../sass/styles.scss */
+/* line 57, ../../../sass/styles.scss */
 #main {
   margin: 0 auto;
   background: #FFFFFF;
 }
 @media (min-width: 37.5em) {
-  /* line 58, ../../../sass/styles.scss */
+  /* line 57, ../../../sass/styles.scss */
   #main {
     width: 60%;
-    margin-top: 120px;
+    margin-top: 130px;
     max-width: 550px;
     border: 1px solid #99a3a5;
     -webkit-border-radius: 2px;
@@ -710,20 +726,20 @@ body {
     box-shadow: 0 0 1px #cfd4d5 inset;
   }
 }
-/* line 71, ../../../sass/styles.scss */
+/* line 70, ../../../sass/styles.scss */
 #main header {
   position: relative;
 }
-/* line 75, ../../../sass/styles.scss */
+/* line 74, ../../../sass/styles.scss */
 #main footer {
   text-align: center;
   color: #838e90;
 }
-/* line 79, ../../../sass/styles.scss */
+/* line 78, ../../../sass/styles.scss */
 #main footer a {
   color: #b89335;
 }
-/* line 84, ../../../sass/styles.scss */
+/* line 83, ../../../sass/styles.scss */
 #main .list-title {
   padding: 0 4%;
   font-size: 2.4em;
@@ -735,7 +751,7 @@ body {
   text-shadow: 0.01em 0.01em 0px white, 0.08em 0.08em 0px #dec88e;
 }
 @media (min-width: 28em) {
-  /* line 84, ../../../sass/styles.scss */
+  /* line 83, ../../../sass/styles.scss */
   #main .list-title {
     font-size: 3.2em;
     padding-top: 75px;
@@ -743,7 +759,7 @@ body {
   }
 }
 @media (min-width: 37.5em) {
-  /* line 84, ../../../sass/styles.scss */
+  /* line 83, ../../../sass/styles.scss */
   #main .list-title {
     font-size: 4em;
     text-shadow: 1px 1px 0px white, 5px 5px 0px #dec88e;
