--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Rokkitt:400,700')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Shadows+Into+Light')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah')
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
     link(rel='stylesheet', href='stylesheets/styles.css')
   body(ng-app='respTodo')
     section(id='main', ng-controller='TodoCtrl')
