--- a/sass/partials/_task-entry.scss
+++ b/sass/partials/_task-entry.scss
@@ -17,7 +17,7 @@
       position: absolute;
       right: 0;
       top: 0;
-      background: #416675;
+      background: $add-task-button-background;
       color: $add-task-button-color;
       height: 46px;
       width: 45px;
@@ -25,10 +25,15 @@
       border: none;
       font-size: 2em;
       
+      &:hover {
+        background: lighten($add-task-button-background, 5%);
+      }
+
       @media (min-width: $bp-narrow) {
         width: 85px;
         font-size: 1.3em;
       }
+
       
       &>span {
         display: none;
